--- a/xpenzora_privacy_policy.html
+++ b/xpenzora_privacy_policy.html
@@ -98,7 +98,7 @@
 
   <section>
     <h2>10. Contact Us</h2>
-    <p>If you have any questions, please contact us at: <strong>[your email]</strong></p>
+    <p>If you have any questions, please contact us at: <strong>fariz.flutterdev@gmail.com</strong></p>
   </section>
 
   <footer>
